# two-stream-networks

./: .gitignore  LICENSE  README.md
arch/: stream_2_data.py  stream_2_model.py  stream_2_sample.py  stream_2_test.py  stream_2_train.py  stream_3_data.py  stream_3_model.py  stream_3_train.py  three_stream_fusion_test_data.py  three_stream_fusion_training.py  three_stream_fusion_training_data.py  three_stream_fusion_training_model.py  three_stream_fusion_val.py  two_stream_fusion.py  two_stream_fusion_data.py  two_stream_fusion_model.py
arch/attention/: gauss.py  package.xml  rgb.py
arch/attention/cmake/Modules/: FindCaffe.cmake
arch/attention/include/: network_classes.hpp
arch/attention/src/python_bindings/: foveateAVA.py  foveateUCF.py  nohup.out  np_opencv_converter.cpp  test.py
arch/caffe2keras/: get_caffe_model_param.py  utils.py
arch/code/: GBXK_SyfisM_1042.avi  bootstrap.py  context.py  context_data.py  context_decidemodel.py  context_generate.py  context_generate_pass.py  context_lstm.py  context_lstm_model.py  context_lstm_test.py  context_lstm_train.py  context_lstm_train_aug.py  context_matrices.py  context_mlp_model.py  context_mlp_test.py  context_mlp_train.py  context_model.py  draw_models.py  flow.py  flow_data.py  flow_model.py  flow_test.py  fusion_context_avg.py  fusion_context_data.py  fusion_context_lstm.py  fusion_context_model.py  fusion_context_test.py  fusion_context_test_lstm.py  fusion_context_train.py  fusion_context_train_lstm.py  lstm_demo.py  rgb.py  rgb_balance_class_weights.py  rgb_balance_postreg.py  rgb_balance_prior.py  rgb_balance_sampling.py  rgb_balance_sampling_demo.py  rgb_data.py  rgb_data_aug.py  rgb_model.py  (+18 more)
arch/code_UCF/: rgbUCF.py  rgbUCF_data.py  rgbUCF_model.py
arch/code_generators/: gen_rgb_data.py
arch/code_with_generators/: pose.py  pose_model.py  rgb.py  rgb_data.py  rgb_model.py  rgb_val.py  utils.py
arch/code_without_generators/: augmentation_demo.py  bootstrap.py  context.py  context_data.py  context_generate.py  context_lstm.py  context_test.py  dirichlet_prior.py  find_dirichlet_dist.py  flow.py  flow_data.py  flow_model.py  flow_test.py  fusion_context_model.py  fusion_context_train.py  fusion_pose_data.py  fusion_pose_model.py  fusion_pose_train.py  output_test_2stream.csv  output_test_3stream.csv  output_test_crop.csv  output_test_ctx.csv  output_test_flow.csv  output_test_fovea.csv  output_test_gauss.csv  output_test_rgb.csv  plot_acc_loss.py  pose_data.py  rgb.py  rgb_aug.py  rgb_balance_sampling.py  rgb_data.py  rgb_model.py  rgb_test.py  stream_2_data.py  stream_2_model.py  stream_2_test.py  stream_2_train.py  (+10 more)
code/: model_conversion.py  rgb_train.py
code/attention_fovea/: CMakeLists.txt  README.md  cropUCF.py  rgbUCF.py
code/attention_fovea/include/: laplacian_foveation.hpp
code/attention_fovea/include/python_bindings/: np_opencv_converter.hpp
code/attention_fovea/src/: yolt.cpp
code/attention_fovea/src/python_bindings/: conversion.cpp  np_opencv_module.cpp  nv_opencv_module.cpp  runFovea.sh
(+3523 files in other folders)
