<?xml version="1.0"?>
<package>
  <name>foveated_yolt</name>
  <version>0.0.0</version>
  <description>The foveated_yolt package</description>

  <maintainer email="rui@todo.todo">rui</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>

</package>
